crates/deadline-cli/tests/cli/snapshots/cli__dcm__queue_list_dcm_user_injects_principal_id.snap
---
source: crates/deadline-cli/tests/cli/dcm.rs
info:
  program: deadline
  args:
    - queue
    - list
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:59135"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:59135"
    AWS_ENDPOINT_URL_S3: "http://localhost:59135"
    AWS_ENDPOINT_URL_STS: "http://localhost:59135"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpit28gO/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpit28gO
---
success: true
exit_code: 0
----- stdout -----
- queueId: queue-dcm
  displayName: DCM Queue


----- stderr -----
